--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ body{
 .header{
     position: fixed;
     width: 100%;
-    top: 94px;
+    top: 34px;
     left: 0;
     background: #fff;
     box-shadow: 0px 6px 7.5px rgba(6, 0, 19, 28%);
@@ -102,9 +102,18 @@ body{
     box-shadow: 2px 3px 4px rgba(201, 33, 134, 28%);
 }
 
+main{
+    margin-top: 180px;
+}
+
+
+
 /*--------------------------Модальное окно------------------------------*/
 
 .popup{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -113,8 +122,6 @@ body{
     left: 0;
     opacity: 0;
     visibility: hidden;
-    overflow-y: auto;
-    overflow-x: hidden;
     transition: all 0.7s ease 0s;
 }
 
@@ -146,7 +153,6 @@ body{
 
 .popup__content{
     max-width: 452px;
-    height: 500px;
     background-color: #fff;
     border-radius: 10px;
     padding-right: 26px;
@@ -218,6 +224,39 @@ body{
     font-weight: 500;
 }
 
+/*--------------------Селекты--------------------------*/
+.select-box{
+    margin-top: 20px;
+    padding-left: 14px;
+    width: 148px;
+    height: 36px;
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: 500;
+    color: rgba(6, 0, 19, 48%);
+    border-radius: 5px;
+    outline: none;
+    border: solid 1px rgba(6, 0, 19, 28%);
+    box-shadow: 0px 2px 7px rgba(0, 0, 0, 10%); 
+}
+
+
+/*--------------------Фотобокс--------------------------*/
+.photo-box{
+    margin-top: 20px;
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.photo-box input{
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: 400;
+}
 
 /*--------------------Чекбокс--------------------------*/
 
@@ -249,6 +288,7 @@ body{
 /*--------------------Кнопка входа--------------------------*/
 .form__btn{
     margin-top: 29px;
+    margin-bottom: 50px;
     width: 100%;
     height: 46px;
     border: none;
